--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -207,3 +207,15 @@
   annotation = {Accepted: 2012-04-18T07:56:31Z},
   file = {/Users/abrahamrojasvega/Zotero/storage/945WVQDI/maazen.pdf}
 }
+
+@inreference{GeometricGroupTheory2024,
+  title = {Geometric Group Theory},
+  booktitle = {Wikipedia},
+  date = {2024-04-07T13:31:21Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Geometric_group_theory&oldid=1217721376},
+  urldate = {2024-08-26},
+  abstract = {Geometric group theory is an area in mathematics devoted to the study of finitely generated groups via exploring the connections between algebraic properties of such groups and topological and geometric properties of spaces on which these groups can act non-trivially (that is, when the groups in question are realized as geometric symmetries or continuous transformations of some spaces). Another important idea in geometric group theory is to consider finitely generated groups themselves as geometric objects. This is usually done by studying the Cayley graphs of groups, which, in addition to the graph structure, are endowed with the structure of a metric space, given by the so-called word metric. Geometric group theory, as a distinct area, is relatively new, and became a clearly identifiable branch of mathematics in the late 1980s and early 1990s. Geometric group theory closely interacts with low-dimensional topology, hyperbolic geometry, algebraic topology, computational group theory and differential geometry. There are also substantial connections with complexity theory, mathematical logic, the study of Lie groups and their discrete subgroups, dynamical systems, probability theory, K-theory, and other areas of mathematics. In the introduction to his book Topics in Geometric Group Theory, Pierre de la Harpe wrote: "One of my personal beliefs is that fascination with symmetries and groups is one way of coping with frustrations of life's limitations: we like to recognize symmetries which allow us to recognize more than what we can see. In this sense the study of geometric group theory is a part of culture, and reminds me of several things that Georges de Rham practiced on many occasions, such as teaching mathematics, reciting Mallarmé, or greeting a friend".:{$\mkern1mu$}3},
+  langid = {english},
+  annotation = {Page Version ID: 1217721376},
+  file = {/Users/abrahamrojasvega/Zotero/storage/3S87IFDU/Geometric_group_theory.html}
+}
