--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -1,7 +1,9 @@
 \documentclass{report}
 % Packages
+
+\usepackage{libertinust1math}
 \usepackage[english]{babel}
-\usepackage{lmodern}
+
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{biblatex} 
