--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -118,7 +118,7 @@
   doi = {10.1007/978-1-4684-9327-6},
   isbn = {978-1-4684-9329-0 978-1-4684-9327-6},
   langid = {english},
-  keywords = {Abelian group,Cohomology,Groups,Gruppe (Math.),Kohomologie},
+  keywords = {Abelian group,Cohomology,Groups,Gruppe (Math.),Kohomologie,notion},
   file = {/Users/abrahamrojasvega/Zotero/storage/DHABUM9I/Brown - 1982 - Cohomology of Groups.pdf}
 }
 
