--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -9,7 +9,7 @@
 \usepackage{biblatex} 
 \usepackage{geometry}
 \geometry{margin=1.5in}
-\usepackage{amsmath,amsfonts,amssymb,amsthm}
+\usepackage{amsmath,amsfonts,amssymb,amsthm,mathrsfs}
 \usepackage{extarrows}
 \usepackage{csquotes}
 \usepackage{pgf,tikz,tikz-cd}
