--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -11,6 +11,21 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/RGTTJ9AE/Weibel - 1994 - An Introduction to Homological Algebra.pdf}
 }
 
+@article{wilberdvanderkallenHomologyStabilityLinear1980,
+  title = {Homology {{Stability}} for {{Linear Groups}}},
+  author = {{Wilberd van der Kallen} and family=Kallen, given=Wilberd, prefix=van der, useprefix=true},
+  date = {1980-10-01},
+  journaltitle = {Inventiones Mathematicae},
+  volume = {60},
+  number = {3},
+  pages = {269--295},
+  doi = {10.1007/bf01390018},
+  abstract = {LetR be a commutative finite dimensional noetherian ring or, more generally, an associative ring which satisfies one of Bass' stable range conditions. We describe a modified version of H. Maazen's work [18], yielding stability for the homology of linear groups overR. Applying W.G. Dwyer's arguments (cf. [9]) we also get stability for homology with twisted coefficients. For example,H2(GLn(R), R n ) takes on a stable value whenn becomes large.},
+  keywords = {notion},
+  annotation = {MAG ID: 1966407048},
+  file = {/Users/abrahamrojasvega/Zotero/storage/PB578ZPP/Wilberd van der Kallen y van der Kallen - 1980 - Homology Stability for Linear Groups.pdf}
+}
+
 @book{hungerfordAlgebra1980,
   title = {Algebra},
   author = {Hungerford, Thomas W.},
@@ -72,20 +87,6 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/46JUZRAP/Weibel - 2013 - The K-book an introduction to algebraic K-theory.pdf}
 }
 
-@article{vasershteinFOUNDATIONSALGEBRAICTHEORY1976,
-  title = {{{FOUNDATIONS OF ALGEBRAIC}} {{{\emph{K}}}} -{{THEORY}}},
-  author = {Vasershtein, L N},
-  date = {1976-08-31},
-  journaltitle = {Russ. Math. Surv.},
-  volume = {31},
-  number = {4},
-  pages = {89--156},
-  issn = {0036-0279, 1468-4829},
-  doi = {10.1070/RM1976v031n04ABEH001560},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/2YK2R6FJ/Vasershtein - 1976 - FOUNDATIONS OF ALGEBRAIC K -THEORY.pdf}
-}
-
 @book{goerssSimplicialHomotopyTheory2009,
   title = {Simplicial {{Homotopy Theory}}},
   author = {Goerss, Paul G. and Jardine, John F.},
@@ -107,6 +108,18 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/PB22UKNL/Schubert - Abstract and Concrete Categories - The Joy of Cats.pdf}
 }
 
+@book{mayConciseCourseAlgebraic1999,
+  title = {A Concise Course in Algebraic Topology},
+  author = {May, J. P.},
+  date = {1999-09-01},
+  abstract = {Algebraic topology is a basic part of modern mathematics, and some knowledge of this area is indispensable for any advanced work relating to geometry, including topology itself, differential geometry, algebraic geometry, and Lie groups. This book provides a detailed treatment of algebraic topology both for teachers of the subject and for advanced graduate students in mathematics either specializing in this area or continuing on to other fields.J. Peter May's approach reflects the enormous internal developments within algebraic topology over the past several decades, most of which are largely unknown to mathematicians in other fields. But he also retains the classical presentations of various topics where appropriate. Most chapters end with problems that further explore and refine the concepts presented. The final four chapters provide sketches of substantial areas of algebraic topology that are normally omitted from introductory texts, and the book concludes with a list of suggested readings for those interested in delving further into the field.},
+  isbn = {978-0-226-51183-2},
+  langid = {Inglés},
+  pagetotal = {254},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/TB5AE47F/May - 1999 - A Concise Course in Algebraic Topology.pdf}
+}
+
 @book{brownCohomologyGroups1982,
   title = {Cohomology of {{Groups}}},
   author = {Brown, Kenneth S.},
@@ -122,7 +135,7 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/DHABUM9I/Brown - 1982 - Cohomology of Groups.pdf}
 }
 
-@book{maySimplicialObjectsAlgebraic1967a,
+@book{maySimplicialObjectsAlgebraic1967,
   title = {Simplicial Objects in Algebraic Topology},
   author = {May, Jon Peter},
   date = {1967},
@@ -168,6 +181,21 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/39AWFBQG/Wahl - 2022 - Homological stability a tool for computations.pdf;/Users/abrahamrojasvega/Zotero/storage/YDTFIHHZ/2203.html}
 }
 
+@article{mirzaiiHomologyStabilityUnitary2002a,
+  title = {Homology Stability for Unitary Groups},
+  author = {Mirzaii, B. and family=Kallen, given=W., prefix=van der, useprefix=false},
+  date = {2002-01-01},
+  journaltitle = {Documenta Mathematica},
+  volume = {7},
+  pages = {143--166},
+  issn = {1431-0635},
+  doi = {10.4171/dm/121},
+  abstract = {B. Mirzaii, W. van der Kallen},
+  langid = {english},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/VFW683ZK/Mirzaii y Kallen - 2002 - Homology stability for unitary groups.pdf}
+}
+
 @book{richterCategoriesHomotopyTheory2020,
   title = {From {{Categories}} to {{Homotopy Theory}}},
   author = {Richter, Birgit},
@@ -208,14 +236,76 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/945WVQDI/maazen.pdf}
 }
 
-@inreference{GeometricGroupTheory2024,
-  title = {Geometric Group Theory},
-  booktitle = {Wikipedia},
-  date = {2024-04-07T13:31:21Z},
-  url = {https://en.wikipedia.org/w/index.php?title=Geometric_group_theory&oldid=1217721376},
-  urldate = {2024-08-26},
-  abstract = {Geometric group theory is an area in mathematics devoted to the study of finitely generated groups via exploring the connections between algebraic properties of such groups and topological and geometric properties of spaces on which these groups can act non-trivially (that is, when the groups in question are realized as geometric symmetries or continuous transformations of some spaces). Another important idea in geometric group theory is to consider finitely generated groups themselves as geometric objects. This is usually done by studying the Cayley graphs of groups, which, in addition to the graph structure, are endowed with the structure of a metric space, given by the so-called word metric. Geometric group theory, as a distinct area, is relatively new, and became a clearly identifiable branch of mathematics in the late 1980s and early 1990s. Geometric group theory closely interacts with low-dimensional topology, hyperbolic geometry, algebraic topology, computational group theory and differential geometry. There are also substantial connections with complexity theory, mathematical logic, the study of Lie groups and their discrete subgroups, dynamical systems, probability theory, K-theory, and other areas of mathematics. In the introduction to his book Topics in Geometric Group Theory, Pierre de la Harpe wrote: "One of my personal beliefs is that fascination with symmetries and groups is one way of coping with frustrations of life's limitations: we like to recognize symmetries which allow us to recognize more than what we can see. In this sense the study of geometric group theory is a part of culture, and reminds me of several things that Georges de Rham practiced on many occasions, such as teaching mathematics, reciting Mallarmé, or greeting a friend".:{$\mkern1mu$}3},
+@article{mirzaiiHomologyStabilitySymplectic2001,
+  title = {Homology Stability for Symplectic Groups},
+  author = {Mirzaii, B. and Kallen, W.},
+  date = {2001-10-16},
+  journaltitle = {arXiv: K-Theory and Homology},
+  url = {https://www.semanticscholar.org/paper/b656ce74f971b47a3be9a7c074bec9cd9c71866f},
+  urldate = {2024-09-03},
+  abstract = {In this paper the homology stability for symplectic groups over a ring with finite stable rank is established. First we develop a `nerve theorem' on the homotopy type of a poset in terms of a cover by subposets, where the cover is itself indexed by a poset. We use the nerve theorem to show that a poset of sequences of isotropic vectors is highly connected, as conjectured by Charney in the eighties.},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/5DK39Y37/Mirzaii y Kallen - 2001 - Homology stability for symplectic groups.pdf}
+}
+
+@article{steenrodConvenientCategoryTopological1967,
+  title = {A Convenient Category of Topological Spaces.},
+  author = {Steenrod, N. E.},
+  date = {1967-05},
+  journaltitle = {Michigan Mathematical Journal},
+  volume = {14},
+  number = {2},
+  pages = {133--152},
+  publisher = {University of Michigan, Department of Mathematics},
+  issn = {0026-2285, 1945-2365},
+  doi = {10.1307/mmj/1028999711},
+  abstract = {The Michigan Mathematical Journal},
+  keywords = {54.22,55.00,notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/G7KILFDF/Steenrod - 1967 - A convenient category of topological spaces..pdf}
+}
+
+@article{quillenHomotopyPropertiesPoset1978a,
+  title = {Homotopy Properties of the Poset of Nontrivial {\emph{P}}-Subgroups of a Group},
+  author = {Quillen, Daniel},
+  date = {1978-05-01},
+  journaltitle = {Advances in Mathematics},
+  volume = {28},
+  number = {2},
+  pages = {101--128},
+  issn = {0001-8708},
+  doi = {10.1016/0001-8708(78)90058-0},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/D9AXHF8S/Quillen - 1978 - Homotopy properties of the poset of nontrivial p-subgroups of a group.pdf;/Users/abrahamrojasvega/Zotero/storage/Y2YTGUTL/0001870878900580.html}
+}
+
+@online{diazMethodIntegralCohomology2007,
+  title = {A Method for Integral Cohomology of Posets},
+  author = {Diaz, Antonio},
+  date = {2007-06-14},
+  eprint = {0706.2118},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  url = {http://arxiv.org/abs/0706.2118},
+  urldate = {2024-09-03},
+  abstract = {We present a method to compute integral cohomology of posets. This toolbox is applicable as soon as the sub-posets under each object possess certain structure. This is the case for simplicial complexes and simplex-like posets. The method is based on homological algebra arguments in the category of functors and on a spectral sequence built upon the poset. We show its relation to discrete Morse theory. As application we give an alternative proof of Webb's conjecture for saturated fusion systems and we compute the cohomology of Coxeter complexes for finite and infinite Coxeter groups.},
   langid = {english},
-  annotation = {Page Version ID: 1217721376},
-  file = {/Users/abrahamrojasvega/Zotero/storage/3S87IFDU/Geometric_group_theory.html}
+  pubstate = {prepublished},
+  keywords = {55U,Mathematics - Algebraic Topology,notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/5E5U58LQ/Diaz - 2007 - A method for integral cohomology of posets.pdf}
+}
+
+@inproceedings{gerstenHigherKtheoryRings1973,
+  title = {Higher {{K-theory}} of Rings},
+  booktitle = {Higher {{K-Theories}}},
+  author = {Gersten, S. M.},
+  editor = {Bass, H.},
+  date = {1973},
+  pages = {3--42},
+  publisher = {Springer},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/BFb0067049},
+  isbn = {978-3-540-37767-2},
+  langid = {english},
+  keywords = {Exact Sequence,Noetherian Ring,notion,Short Exact Sequence,Spectral Sequence,Unitary Ring},
+  file = {/Users/abrahamrojasvega/Zotero/storage/527H3F6I/Gersten - 1973 - Higher K-theory of rings.pdf}
 }
