--- a/notas/ktheory.tex
+++ b/notas/ktheory.tex
@@ -20,6 +20,11 @@ The corresponding constructions involving an auxiliary quadratic form received t
 
 In string theory, the K-theory classification of Ramond-Ramond field strengths and the charges of stable Dbranes was first proposed in 1997.[5]
 
+\chapter{Grothendieck's K-theory}
+
+
+\chapter{Topological K-Theory}
+
 
 \chapter{Milnor's K-theory}
 References \cite{srinivasAlgebraicKTheory1996}
@@ -143,13 +148,12 @@ and the surjection $\phi: \operatorname{St}(R) \longrightarrow E(R)$. Let $$K_2(
 
 
 
-\chapter{Grothendieck's K-theory}
 
 
 
 
 
-\chapter{Whitehead's K-theory}
+%\chapter{Whitehead's K-theory}
 
 \chapter{Quillen's K-theory}
 
@@ -202,7 +206,7 @@ $
 Quillen's K-theory is defined as
 $$K_i(R)=\pi_i\left(B G L(R)^{+}\right), i \geq 1$$
 
-
+\section{Exact categories}
 
 
 
@@ -297,7 +301,11 @@ Consider in $\mathrm{St}_{n+1}(\Lambda)$ the following subgroups: $A^i=\left\{\a
 % (2.5) In the notations of (2.3), let $Z(G,\{G\})$ be the simplicial set whose non-degenerate p-simplices are sequences $\left(\bar{g}_0, \ldots, \bar{g}_p\right)$, where $\bar{g}_i \varepsilon G / G_{k_i}, k_0<\ldots<k_p$, and the $\bar{g}_i$ are such that there is $g \in G$ with $\vec{g}_i=g \bmod G_{k_i}$ for all i. (If one covers $G$ by the right cosets of the $G_i$, then $Z\left(G_g\left\{G_i\right\}\right)$ is the nerve of this covering.) It is easy to see that the geometric realization of this simplicial set is an ordered simplicial space and that the complex $L=L\left(G,\left\{G_i\right\}\right)$ equals the (ordered) simplicial complex [7] of this simplicial space, or in other words, the complex $L$ equals the normalised complex of the simplicial set $Z\left(G,\left\{G_i\right\}\right)$. In particular, $H_*(L)=H_*\left(Z\left(G,\left\{G_i\right\}\right)\right)$.
 
 % (2.6) Remark. It may be shown easily that the space $Z\left(G,\left\{G_i\right\}\right)$, is homotopy equivalent to Volodin's space $V\left(G,\left\{G_i\right\}\right)$, but we will not need this fact.
+\chapter{Other important results}
 
+\section{Whitehead}
+
+\section{Bass}
 
 
 
