--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -1,123 +1,11 @@
-@book{weibelIntroductionHomologicalAlgebra1994,
-  title = {An {{Introduction}} to {{Homological Algebra}}},
-  author = {Weibel, Charles A.},
-  date = {1994-04-29},
-  edition = {1},
-  publisher = {Cambridge University Press},
-  doi = {10.1017/CBO9781139644136},
-  abstract = {The landscape of homological algebra has evolved over the last half-century into a fundamental tool for the working mathematician. This book provides a unified account of homological algebra as it exists today. The historical connection with topology, regular local rings, and semi-simple Lie algebras are also described. This book is suitable for second or third year graduate students. The first half of the book takes as its subject the canonical topics in homological algebra: derived functors, Tor and Ext, projective dimensions and spectral sequences. Homology of group and Lie algebras illustrate these topics.  Intermingled are less canonical topics, such as the derived inverse limit functor lim1, local cohomology, Galois cohomology, and affine Lie algebras. The last part of the book covers less traditional topics that are a vital part of the modern homological toolkit: simplicial methods, Hochschild and cyclic homology, derived categories and total derived functors. By making these tools more accessible, the book helps to break down the technological barrier between experts and casual users of homological algebra.},
-  isbn = {978-0-521-43500-0 978-0-521-55987-4 978-1-139-64413-6},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/RGTTJ9AE/Weibel - 1994 - An Introduction to Homological Algebra.pdf}
-}
-
-@article{wilberdvanderkallenHomologyStabilityLinear1980,
-  title = {Homology {{Stability}} for {{Linear Groups}}},
-  author = {{Wilberd van der Kallen} and family=Kallen, given=Wilberd, prefix=van der, useprefix=true},
-  date = {1980-10-01},
-  journaltitle = {Inventiones Mathematicae},
-  volume = {60},
-  number = {3},
-  pages = {269--295},
-  doi = {10.1007/bf01390018},
-  abstract = {LetR be a commutative finite dimensional noetherian ring or, more generally, an associative ring which satisfies one of Bass' stable range conditions. We describe a modified version of H. Maazen's work [18], yielding stability for the homology of linear groups overR. Applying W.G. Dwyer's arguments (cf. [9]) we also get stability for homology with twisted coefficients. For example,H2(GLn(R), R n ) takes on a stable value whenn becomes large.},
-  keywords = {notion},
-  annotation = {MAG ID: 1966407048},
-  file = {/Users/abrahamrojasvega/Zotero/storage/PB578ZPP/Wilberd van der Kallen y van der Kallen - 1980 - Homology Stability for Linear Groups.pdf}
-}
-
-@book{hungerfordAlgebra1980,
-  title = {Algebra},
-  author = {Hungerford, Thomas W.},
-  date = {1980},
-  series = {Graduate {{Texts}} in {{Mathematics}}},
-  volume = {73},
-  publisher = {Springer},
-  location = {New York, NY},
-  doi = {10.1007/978-1-4612-6101-8},
-  isbn = {978-1-4612-6103-2 978-1-4612-6101-8},
-  keywords = {Adjoint functor,algebra,Coproduct,field,finite group,Galois theory,homomorphism,linear algebra,matrices,semigroup,transformation},
-  file = {/Users/abrahamrojasvega/Zotero/storage/VADZBH7A/Hungerford - 1980 - Algebra.pdf}
-}
-
-@incollection{suslinStabilityAlgebraicKtheory1982,
-  title = {Stability in Algebraic {{K-theory}}},
-  booktitle = {Algebraic {{K-Theory}}},
-  author = {Suslin, A. A.},
-  editor = {Dennis, R. Keith},
-  date = {1982},
-  volume = {966},
-  pages = {304--333},
-  publisher = {Springer Berlin Heidelberg},
-  location = {Berlin, Heidelberg},
-  doi = {10.1007/BFb0062181},
-  isbn = {978-3-540-11965-4 978-3-540-39553-9},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/ACEER5D3/Suslin - 1982 - Stability in algebraic K-theory.pdf}
-}
-
-@article{volodinALGEBRAICTHEORYEXTRAORDINARY1971,
-  title = {{{ALGEBRAIC}} {{{\emph{K}}}} -{{THEORY AS EXTRAORDINARY HOMOLOGY THEORY ON THE CATEGORY OF ASSOCIATIVE RINGS WITH UNITY}}},
-  author = {Volodin, I A},
-  date = {1971-08-31},
-  journaltitle = {Math. USSR Izv.},
-  volume = {5},
-  number = {4},
-  pages = {859--887},
-  issn = {0025-5726},
-  doi = {10.1070/IM1971v005n04ABEH001121},
-  abstract = {Algebraic K-theory can be constructed by means of the homotopy groups of the abstract simplicial structure on the group of invertible matrices GL(A) of the ring A. This structure may be naturally taken as two-sidedly invariant. Of basic interest is the multiplication in the functor so obtained, which for different rings A assumes different aspects.},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/57Z7A867/Volodin - 1971 - ALGEBRAIC K -THEORY AS EXTRAORDINARY HOMOLO.pdf}
-}
-
-@book{weibelKbookIntroductionAlgebraic2013a,
-  title = {The {{K-book}}: An Introduction to Algebraic {{K-theory}}},
-  shorttitle = {The {{K-book}}},
-  author = {Weibel, Charles A.},
-  date = {2013},
-  series = {Graduate Studies in Mathematics},
-  number = {volume 145},
-  publisher = {American Mathematical Society},
-  location = {Providence, Rhode Island},
-  isbn = {978-0-8218-9132-2},
-  langid = {english},
-  pagetotal = {618},
-  keywords = {$K$-theory -- General reference works (handbooks dictionaries bibliographies etc.),$K$-theory -- Instructional exposition (textbooks tutorial papers etc.),K-theory},
-  file = {/Users/abrahamrojasvega/Zotero/storage/46JUZRAP/Weibel - 2013 - The K-book an introduction to algebraic K-theory.pdf}
-}
-
-@book{goerssSimplicialHomotopyTheory2009,
-  title = {Simplicial {{Homotopy Theory}}},
-  author = {Goerss, Paul G. and Jardine, John F.},
-  date = {2009},
-  publisher = {Birkhäuser Basel},
-  location = {Basel},
-  doi = {10.1007/978-3-0346-0189-4},
-  isbn = {978-3-0346-0188-7 978-3-0346-0189-4},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/WDRQYMWS/Goerss y Jardine - 2009 - Simplicial Homotopy Theory.pdf}
-}
-
 @misc{adamekAbstractConcreteCategories,
   title = {Abstract and {{Concrete Categories}} - {{The Joy}} of {{Cats}}},
   author = {Adámek, Jirí and Herrlich, Horst and Strecker, George E.},
   editor = {Schubert, Christoph},
   url = {http://katmat.math.uni-bremen.de/acc/},
   langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/PB22UKNL/Schubert - Abstract and Concrete Categories - The Joy of Cats.pdf}
-}
-
-@book{mayConciseCourseAlgebraic1999,
-  title = {A Concise Course in Algebraic Topology},
-  author = {May, J. P.},
-  date = {1999-09-01},
-  abstract = {Algebraic topology is a basic part of modern mathematics, and some knowledge of this area is indispensable for any advanced work relating to geometry, including topology itself, differential geometry, algebraic geometry, and Lie groups. This book provides a detailed treatment of algebraic topology both for teachers of the subject and for advanced graduate students in mathematics either specializing in this area or continuing on to other fields.J. Peter May's approach reflects the enormous internal developments within algebraic topology over the past several decades, most of which are largely unknown to mathematicians in other fields. But he also retains the classical presentations of various topics where appropriate. Most chapters end with problems that further explore and refine the concepts presented. The final four chapters provide sketches of substantial areas of algebraic topology that are normally omitted from introductory texts, and the book concludes with a list of suggested readings for those interested in delving further into the field.},
-  isbn = {978-0-226-51183-2},
-  langid = {Inglés},
-  pagetotal = {254},
   keywords = {notion},
-  file = {/Users/abrahamrojasvega/Zotero/storage/TB5AE47F/May - 1999 - A Concise Course in Algebraic Topology.pdf}
+  file = {/Users/abrahamrojasvega/Zotero/storage/PB22UKNL/Schubert - Abstract and Concrete Categories - The Joy of Cats.pdf}
 }
 
 @book{brownCohomologyGroups1982,
@@ -133,149 +21,6 @@
   langid = {english},
   keywords = {Abelian group,Cohomology,Groups,Gruppe (Math.),Kohomologie,notion},
   file = {/Users/abrahamrojasvega/Zotero/storage/DHABUM9I/Brown - 1982 - Cohomology of Groups.pdf}
-}
-
-@book{maySimplicialObjectsAlgebraic1967,
-  title = {Simplicial Objects in Algebraic Topology},
-  author = {May, Jon Peter},
-  date = {1967},
-  series = {Midway Reprint},
-  publisher = {Univ. of Chicago Press},
-  location = {Chicago},
-  isbn = {978-0-226-51180-1},
-  pagetotal = {161},
-  file = {/Users/abrahamrojasvega/Zotero/storage/9AMW2G9Y/May - 1967 - Simplicial objects in algebraic topology.pdf}
-}
-
-@misc{kupersHomologicalStabilityMinicourse2021,
-  title = {Homological {{Stability Minicourse}}},
-  author = {Kupers, Alexander},
-  date = {2021-05-13},
-  url = {https://www.utsc.utoronto.ca/people/kupers/wp-content/uploads/sites/50/homstab.pdf},
-  urldate = {2024-06-14},
-  abstract = {These are the collected lecture notes for eCHT minicourse on homological stability in spring 2021.},
-  file = {/Users/abrahamrojasvega/Zotero/storage/Z8SYHVQH/homstab.pdf}
-}
-
-@misc{hatcherAlgebraicTopology2021,
-  title = {Algebraic {{Topology}}},
-  author = {Hatcher, Allen},
-  date = {2021},
-  url = {https://pi.math.cornell.edu/~hatcher/AT/AT.pdf},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/W9KE4PQ6/Hatcher.pdf}
-}
-
-@online{wahlHomologicalStabilityTool2022,
-  title = {Homological Stability: A Tool for Computations},
-  shorttitle = {Homological Stability},
-  author = {Wahl, Nathalie},
-  date = {2022-03-15},
-  eprint = {2203.07767},
-  eprinttype = {arXiv},
-  eprintclass = {math},
-  doi = {10.48550/arXiv.2203.07767},
-  abstract = {Homological stability has shown itself to be a powerful tool for the computation of homology of families of groups such as general linear groups, mapping class groups or automorphisms of free groups. We survey here tools and techniques for proving homological stability theorems and for computing the stable homology, and illustrate the method through the computation of the homology of Higman-Thompson groups.},
-  pubstate = {prepublished},
-  keywords = {Mathematics - Algebraic Topology,Mathematics - Geometric Topology},
-  file = {/Users/abrahamrojasvega/Zotero/storage/39AWFBQG/Wahl - 2022 - Homological stability a tool for computations.pdf;/Users/abrahamrojasvega/Zotero/storage/YDTFIHHZ/2203.html}
-}
-
-@article{mirzaiiHomologyStabilityUnitary2002a,
-  title = {Homology Stability for Unitary Groups},
-  author = {Mirzaii, B. and family=Kallen, given=W., prefix=van der, useprefix=false},
-  date = {2002-01-01},
-  journaltitle = {Documenta Mathematica},
-  volume = {7},
-  pages = {143--166},
-  issn = {1431-0635},
-  doi = {10.4171/dm/121},
-  abstract = {B. Mirzaii, W. van der Kallen},
-  langid = {english},
-  keywords = {notion},
-  file = {/Users/abrahamrojasvega/Zotero/storage/VFW683ZK/Mirzaii y Kallen - 2002 - Homology stability for unitary groups.pdf}
-}
-
-@book{richterCategoriesHomotopyTheory2020,
-  title = {From {{Categories}} to {{Homotopy Theory}}},
-  author = {Richter, Birgit},
-  date = {2020-04-16},
-  edition = {1},
-  publisher = {Cambridge University Press},
-  doi = {10.1017/9781108855891},
-  isbn = {978-1-108-85589-1 978-1-108-47962-2},
-  file = {/Users/abrahamrojasvega/Zotero/storage/28Z48F8D/Richter - 2020 - From Categories to Homotopy Theory.pdf}
-}
-
-@book{srinivasAlgebraicKTheory1996,
-  title = {Algebraic {{K-Theory}}},
-  author = {Srinivas, V.},
-  editor = {Bass, Hyman and Oesterlé, Joseph and Weinstein, Alan},
-  editortype = {redactor},
-  date = {1996},
-  series = {Progress in {{Mathematics}}},
-  publisher = {Birkhäuser Boston},
-  location = {Boston, MA},
-  doi = {10.1007/978-0-8176-4739-1},
-  isbn = {978-0-8176-4736-0 978-0-8176-4739-1},
-  langid = {english},
-  file = {/Users/abrahamrojasvega/Zotero/storage/DMVGHGPT/Srinivas - 1996 - Algebraic K-Theory.pdf}
-}
-
-@thesis{maazenHomologyStabilityGeneral1979a,
-  type = {phdthesis},
-  title = {Homology Stability for the General Linear Group},
-  author = {Maazen, Hendrik},
-  date = {1979-06-01},
-  institution = {Utrecht University},
-  url = {https://dspace.library.uu.nl/handle/1874/237657},
-  urldate = {2024-08-16},
-  abstract = {This thesis studies the homology stability problem for general linear groups over Euclidean rings and over subrings of the field of rational numbers. Affine linear groups, acting on affine space rather than linear space, are also considered. In order to get stability results one establishes that certain posets of ordered unimodular sequences of vectors are Cohen-Macaulay. The ideas are first illustrated by reproving the Nakaoka stability theorem on homology stability for symmetric groups.},
-  langid = {english},
-  annotation = {Accepted: 2012-04-18T07:56:31Z},
-  file = {/Users/abrahamrojasvega/Zotero/storage/945WVQDI/maazen.pdf}
-}
-
-@article{mirzaiiHomologyStabilitySymplectic2001,
-  title = {Homology Stability for Symplectic Groups},
-  author = {Mirzaii, B. and Kallen, W.},
-  date = {2001-10-16},
-  journaltitle = {arXiv: K-Theory and Homology},
-  url = {https://www.semanticscholar.org/paper/b656ce74f971b47a3be9a7c074bec9cd9c71866f},
-  urldate = {2024-09-03},
-  abstract = {In this paper the homology stability for symplectic groups over a ring with finite stable rank is established. First we develop a `nerve theorem' on the homotopy type of a poset in terms of a cover by subposets, where the cover is itself indexed by a poset. We use the nerve theorem to show that a poset of sequences of isotropic vectors is highly connected, as conjectured by Charney in the eighties.},
-  keywords = {notion},
-  file = {/Users/abrahamrojasvega/Zotero/storage/5DK39Y37/Mirzaii y Kallen - 2001 - Homology stability for symplectic groups.pdf}
-}
-
-@article{steenrodConvenientCategoryTopological1967,
-  title = {A Convenient Category of Topological Spaces.},
-  author = {Steenrod, N. E.},
-  date = {1967-05},
-  journaltitle = {Michigan Mathematical Journal},
-  volume = {14},
-  number = {2},
-  pages = {133--152},
-  publisher = {University of Michigan, Department of Mathematics},
-  issn = {0026-2285, 1945-2365},
-  doi = {10.1307/mmj/1028999711},
-  abstract = {The Michigan Mathematical Journal},
-  keywords = {54.22,55.00,notion},
-  file = {/Users/abrahamrojasvega/Zotero/storage/G7KILFDF/Steenrod - 1967 - A convenient category of topological spaces..pdf}
-}
-
-@article{quillenHomotopyPropertiesPoset1978a,
-  title = {Homotopy Properties of the Poset of Nontrivial {\emph{P}}-Subgroups of a Group},
-  author = {Quillen, Daniel},
-  date = {1978-05-01},
-  journaltitle = {Advances in Mathematics},
-  volume = {28},
-  number = {2},
-  pages = {101--128},
-  issn = {0001-8708},
-  doi = {10.1016/0001-8708(78)90058-0},
-  keywords = {notion},
-  file = {/Users/abrahamrojasvega/Zotero/storage/D9AXHF8S/Quillen - 1978 - Homotopy properties of the poset of nontrivial p-subgroups of a group.pdf;/Users/abrahamrojasvega/Zotero/storage/Y2YTGUTL/0001870878900580.html}
 }
 
 @online{diazMethodIntegralCohomology2007,
@@ -308,4 +53,285 @@
   langid = {english},
   keywords = {Exact Sequence,Noetherian Ring,notion,Short Exact Sequence,Spectral Sequence,Unitary Ring},
   file = {/Users/abrahamrojasvega/Zotero/storage/527H3F6I/Gersten - 1973 - Higher K-theory of rings.pdf}
+}
+
+@book{goerssSimplicialHomotopyTheory2009,
+  title = {Simplicial {{Homotopy Theory}}},
+  author = {Goerss, Paul G. and Jardine, John F.},
+  date = {2009},
+  publisher = {Birkhäuser Basel},
+  location = {Basel},
+  doi = {10.1007/978-3-0346-0189-4},
+  isbn = {978-3-0346-0188-7 978-3-0346-0189-4},
+  langid = {english},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/WDRQYMWS/Goerss y Jardine - 2009 - Simplicial Homotopy Theory.pdf}
+}
+
+@misc{hatcherAlgebraicTopology2021,
+  title = {Algebraic {{Topology}}},
+  author = {Hatcher, Allen},
+  date = {2021},
+  url = {https://pi.math.cornell.edu/~hatcher/AT/AT.pdf},
+  langid = {english},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/W9KE4PQ6/Hatcher.pdf}
+}
+
+@book{hungerfordAlgebra1980,
+  title = {Algebra},
+  author = {Hungerford, Thomas W.},
+  date = {1980},
+  series = {Graduate {{Texts}} in {{Mathematics}}},
+  volume = {73},
+  publisher = {Springer},
+  location = {New York, NY},
+  doi = {10.1007/978-1-4612-6101-8},
+  isbn = {978-1-4612-6103-2 978-1-4612-6101-8},
+  keywords = {Adjoint functor,algebra,Coproduct,field,finite group,Galois theory,homomorphism,linear algebra,matrices,notion,semigroup,transformation},
+  file = {/Users/abrahamrojasvega/Zotero/storage/VADZBH7A/Hungerford - 1980 - Algebra.pdf}
+}
+
+@misc{kupersHomologicalStabilityMinicourse2021,
+  title = {Homological {{Stability Minicourse}}},
+  author = {Kupers, Alexander},
+  date = {2021-05-13},
+  url = {https://www.utsc.utoronto.ca/people/kupers/wp-content/uploads/sites/50/homstab.pdf},
+  urldate = {2024-06-14},
+  abstract = {These are the collected lecture notes for eCHT minicourse on homological stability in spring 2021.},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/Z8SYHVQH/homstab.pdf}
+}
+
+@thesis{maazenHomologyStabilityGeneral1979a,
+  type = {phdthesis},
+  title = {Homology Stability for the General Linear Group},
+  author = {Maazen, Hendrik},
+  date = {1979-06-01},
+  institution = {Utrecht University},
+  url = {https://dspace.library.uu.nl/handle/1874/237657},
+  urldate = {2024-08-16},
+  abstract = {This thesis studies the homology stability problem for general linear groups over Euclidean rings and over subrings of the field of rational numbers. Affine linear groups, acting on affine space rather than linear space, are also considered. In order to get stability results one establishes that certain posets of ordered unimodular sequences of vectors are Cohen-Macaulay. The ideas are first illustrated by reproving the Nakaoka stability theorem on homology stability for symmetric groups.},
+  langid = {english},
+  keywords = {notion},
+  annotation = {Accepted: 2012-04-18T07:56:31Z},
+  file = {/Users/abrahamrojasvega/Zotero/storage/945WVQDI/maazen.pdf}
+}
+
+@book{mayConciseCourseAlgebraic1999,
+  title = {A Concise Course in Algebraic Topology},
+  author = {May, J. P.},
+  date = {1999-09-01},
+  abstract = {Algebraic topology is a basic part of modern mathematics, and some knowledge of this area is indispensable for any advanced work relating to geometry, including topology itself, differential geometry, algebraic geometry, and Lie groups. This book provides a detailed treatment of algebraic topology both for teachers of the subject and for advanced graduate students in mathematics either specializing in this area or continuing on to other fields.J. Peter May's approach reflects the enormous internal developments within algebraic topology over the past several decades, most of which are largely unknown to mathematicians in other fields. But he also retains the classical presentations of various topics where appropriate. Most chapters end with problems that further explore and refine the concepts presented. The final four chapters provide sketches of substantial areas of algebraic topology that are normally omitted from introductory texts, and the book concludes with a list of suggested readings for those interested in delving further into the field.},
+  isbn = {978-0-226-51183-2},
+  langid = {Inglés},
+  pagetotal = {254},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/TB5AE47F/May - 1999 - A Concise Course in Algebraic Topology.pdf}
+}
+
+@book{maySimplicialObjectsAlgebraic1967,
+  title = {Simplicial Objects in Algebraic Topology},
+  author = {May, Jon Peter},
+  date = {1967},
+  series = {Midway Reprint},
+  publisher = {Univ. of Chicago Press},
+  location = {Chicago},
+  isbn = {978-0-226-51180-1},
+  pagetotal = {161},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/9AMW2G9Y/May - 1967 - Simplicial objects in algebraic topology.pdf}
+}
+
+@article{mirzaiiHomologyStabilitySymplectic2001,
+  title = {Homology Stability for Symplectic Groups},
+  author = {Mirzaii, B. and Kallen, W.},
+  date = {2001-10-16},
+  journaltitle = {arXiv: K-Theory and Homology},
+  url = {https://www.semanticscholar.org/paper/b656ce74f971b47a3be9a7c074bec9cd9c71866f},
+  urldate = {2024-09-03},
+  abstract = {In this paper the homology stability for symplectic groups over a ring with finite stable rank is established. First we develop a `nerve theorem' on the homotopy type of a poset in terms of a cover by subposets, where the cover is itself indexed by a poset. We use the nerve theorem to show that a poset of sequences of isotropic vectors is highly connected, as conjectured by Charney in the eighties.},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/5DK39Y37/Mirzaii y Kallen - 2001 - Homology stability for symplectic groups.pdf}
+}
+
+@article{mirzaiiHomologyStabilityUnitary2002a,
+  title = {Homology Stability for Unitary Groups},
+  author = {Mirzaii, B. and family=Kallen, given=W., prefix=van der, useprefix=false},
+  date = {2002-01-01},
+  journaltitle = {Documenta Mathematica},
+  volume = {7},
+  pages = {143--166},
+  issn = {1431-0635},
+  doi = {10.4171/dm/121},
+  abstract = {B. Mirzaii, W. van der Kallen},
+  langid = {english},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/VFW683ZK/Mirzaii y Kallen - 2002 - Homology stability for unitary groups.pdf}
+}
+
+@article{quillenHomotopyPropertiesPoset1978a,
+  title = {Homotopy Properties of the Poset of Nontrivial {\emph{P}}-Subgroups of a Group},
+  author = {Quillen, Daniel},
+  date = {1978-05-01},
+  journaltitle = {Advances in Mathematics},
+  volume = {28},
+  number = {2},
+  pages = {101--128},
+  issn = {0001-8708},
+  doi = {10.1016/0001-8708(78)90058-0},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/D9AXHF8S/Quillen - 1978 - Homotopy properties of the poset of nontrivial p-subgroups of a group.pdf;/Users/abrahamrojasvega/Zotero/storage/Y2YTGUTL/0001870878900580.html}
+}
+
+@book{richterCategoriesHomotopyTheory2020,
+  title = {From {{Categories}} to {{Homotopy Theory}}},
+  author = {Richter, Birgit},
+  date = {2020-04-16},
+  edition = {1},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/9781108855891},
+  isbn = {978-1-108-85589-1 978-1-108-47962-2},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/28Z48F8D/Richter - 2020 - From Categories to Homotopy Theory.pdf}
+}
+
+@book{srinivasAlgebraicKTheory1996,
+  title = {Algebraic {{K-Theory}}},
+  author = {Srinivas, V.},
+  editor = {Bass, Hyman and Oesterlé, Joseph and Weinstein, Alan},
+  editortype = {redactor},
+  date = {1996},
+  series = {Progress in {{Mathematics}}},
+  publisher = {Birkhäuser Boston},
+  location = {Boston, MA},
+  doi = {10.1007/978-0-8176-4739-1},
+  isbn = {978-0-8176-4736-0 978-0-8176-4739-1},
+  langid = {english},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/DMVGHGPT/Srinivas - 1996 - Algebraic K-Theory.pdf}
+}
+
+@article{steenrodConvenientCategoryTopological1967,
+  title = {A Convenient Category of Topological Spaces.},
+  author = {Steenrod, N. E.},
+  date = {1967-05},
+  journaltitle = {Michigan Mathematical Journal},
+  volume = {14},
+  number = {2},
+  pages = {133--152},
+  publisher = {University of Michigan, Department of Mathematics},
+  issn = {0026-2285, 1945-2365},
+  doi = {10.1307/mmj/1028999711},
+  abstract = {The Michigan Mathematical Journal},
+  keywords = {54.22,55.00,notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/G7KILFDF/Steenrod - 1967 - A convenient category of topological spaces..pdf}
+}
+
+@article{suslinEquivalenceKtheories1981c,
+  title = {On the Equivalence of K-Theories},
+  author = {Suslin, A.A.},
+  date = {1981-01-01},
+  journaltitle = {Communications in Algebra},
+  volume = {9},
+  number = {15},
+  pages = {1559--1566},
+  publisher = {Taylor \& Francis},
+  issn = {0092-7872},
+  doi = {10.1080/00927878108822666},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/Q72T82QE/Suslin - 1981 - On the equivalence of k-theories.pdf}
+}
+
+@incollection{suslinStabilityAlgebraicKtheory1982,
+  title = {Stability in Algebraic {{K-theory}}},
+  booktitle = {Algebraic {{K-Theory}}},
+  author = {Suslin, A. A.},
+  editor = {Dennis, R. Keith},
+  date = {1982},
+  volume = {966},
+  pages = {304--333},
+  publisher = {Springer Berlin Heidelberg},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/BFb0062181},
+  isbn = {978-3-540-11965-4 978-3-540-39553-9},
+  langid = {english},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/ACEER5D3/Suslin - 1982 - Stability in algebraic K-theory.pdf}
+}
+
+@article{volodinALGEBRAICTHEORYEXTRAORDINARY1971,
+  title = {{{ALGEBRAIC}} {{{\emph{K}}}} -{{THEORY AS EXTRAORDINARY HOMOLOGY THEORY ON THE CATEGORY OF ASSOCIATIVE RINGS WITH UNITY}}},
+  author = {Volodin, I A},
+  date = {1971-08-31},
+  journaltitle = {Math. USSR Izv.},
+  volume = {5},
+  number = {4},
+  pages = {859--887},
+  issn = {0025-5726},
+  doi = {10.1070/IM1971v005n04ABEH001121},
+  abstract = {Algebraic K-theory can be constructed by means of the homotopy groups of the abstract simplicial structure on the group of invertible matrices GL(A) of the ring A. This structure may be naturally taken as two-sidedly invariant. Of basic interest is the multiplication in the functor so obtained, which for different rings A assumes different aspects.},
+  langid = {english},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/57Z7A867/Volodin - 1971 - ALGEBRAIC K -THEORY AS EXTRAORDINARY HOMOLO.pdf}
+}
+
+@online{wahlHomologicalStabilityTool2022,
+  title = {Homological Stability: A Tool for Computations},
+  shorttitle = {Homological Stability},
+  author = {Wahl, Nathalie},
+  date = {2022-03-15},
+  eprint = {2203.07767},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  doi = {10.48550/arXiv.2203.07767},
+  abstract = {Homological stability has shown itself to be a powerful tool for the computation of homology of families of groups such as general linear groups, mapping class groups or automorphisms of free groups. We survey here tools and techniques for proving homological stability theorems and for computing the stable homology, and illustrate the method through the computation of the homology of Higman-Thompson groups.},
+  pubstate = {prepublished},
+  keywords = {Mathematics - Algebraic Topology,Mathematics - Geometric Topology,notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/39AWFBQG/Wahl - 2022 - Homological stability a tool for computations.pdf;/Users/abrahamrojasvega/Zotero/storage/YDTFIHHZ/2203.html}
+}
+
+@book{weibelIntroductionHomologicalAlgebra1994,
+  title = {An {{Introduction}} to {{Homological Algebra}}},
+  author = {Weibel, Charles A.},
+  date = {1994-04-29},
+  edition = {1},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/CBO9781139644136},
+  abstract = {The landscape of homological algebra has evolved over the last half-century into a fundamental tool for the working mathematician. This book provides a unified account of homological algebra as it exists today. The historical connection with topology, regular local rings, and semi-simple Lie algebras are also described. This book is suitable for second or third year graduate students. The first half of the book takes as its subject the canonical topics in homological algebra: derived functors, Tor and Ext, projective dimensions and spectral sequences. Homology of group and Lie algebras illustrate these topics.  Intermingled are less canonical topics, such as the derived inverse limit functor lim1, local cohomology, Galois cohomology, and affine Lie algebras. The last part of the book covers less traditional topics that are a vital part of the modern homological toolkit: simplicial methods, Hochschild and cyclic homology, derived categories and total derived functors. By making these tools more accessible, the book helps to break down the technological barrier between experts and casual users of homological algebra.},
+  isbn = {978-0-521-43500-0 978-0-521-55987-4 978-1-139-64413-6},
+  langid = {english},
+  keywords = {notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/RGTTJ9AE/Weibel - 1994 - An Introduction to Homological Algebra.pdf}
+}
+
+@book{weibelKbookIntroductionAlgebraic2013a,
+  title = {The {{K-book}}: An Introduction to Algebraic {{K-theory}}},
+  shorttitle = {The {{K-book}}},
+  author = {Weibel, Charles A.},
+  date = {2013},
+  series = {Graduate Studies in Mathematics},
+  number = {volume 145},
+  publisher = {American Mathematical Society},
+  location = {Providence, Rhode Island},
+  isbn = {978-0-8218-9132-2},
+  langid = {english},
+  pagetotal = {618},
+  keywords = {$K$-theory -- General reference works (handbooks dictionaries bibliographies etc.),$K$-theory -- Instructional exposition (textbooks tutorial papers etc.),K-theory,notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/46JUZRAP/Weibel - 2013 - The K-book an introduction to algebraic K-theory.pdf}
+}
+
+@article{wilberdvanderkallenHomologyStabilityLinear1980,
+  title = {Homology {{Stability}} for {{Linear Groups}}},
+  author = {{Wilberd van der Kallen} and family=Kallen, given=Wilberd, prefix=van der, useprefix=true},
+  date = {1980-10-01},
+  journaltitle = {Inventiones Mathematicae},
+  volume = {60},
+  number = {3},
+  pages = {269--295},
+  doi = {10.1007/bf01390018},
+  abstract = {LetR be a commutative finite dimensional noetherian ring or, more generally, an associative ring which satisfies one of Bass' stable range conditions. We describe a modified version of H. Maazen's work [18], yielding stability for the homology of linear groups overR. Applying W.G. Dwyer's arguments (cf. [9]) we also get stability for homology with twisted coefficients. For example,H2(GLn(R), R n ) takes on a stable value whenn becomes large.},
+  keywords = {notion},
+  annotation = {MAG ID: 1966407048},
+  file = {/Users/abrahamrojasvega/Zotero/storage/PB578ZPP/Wilberd van der Kallen y van der Kallen - 1980 - Homology Stability for Linear Groups.pdf}
 }
