--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -1,7 +1,8 @@
 \documentclass{report}
 % Packages
 
-\usepackage{libertinust1math}
+
+\usepackage{arev}
 \usepackage[english]{babel}
 
 \usepackage[T1]{fontenc}
@@ -21,10 +22,10 @@
 \newtheorem{lemm}{Lemma}
 \newtheorem{example}{Example}
 \newtheorem{rema}{Remark}
-\newcommand{\ca}{$\mathcal{A}$}
-\newcommand{\cb}{$\mathcal{B}$}
-\newcommand{\cc}{$\mathcal{C}$}
-\newcommand{\cd}{$\mathcal{D}$}
+\newcommand{\ca}{$\mathcal{A}$ }
+\newcommand{\cb}{$\mathcal{B}$ }
+\newcommand{\cc}{$\mathcal{C}$ }
+\newcommand{\cd}{$\mathcal{D}$ }
 
 % Title and Author
 \title{PhD Studies}
