--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -1,7 +1,8 @@
-@misc{adamekAbstractConcreteCategories,
+@misc{adamekAbstractConcreteCategories2004,
   title = {Abstract and {{Concrete Categories}} - {{The Joy}} of {{Cats}}},
   author = {Adámek, Jirí and Herrlich, Horst and Strecker, George E.},
   editor = {Schubert, Christoph},
+  date = {2004},
   url = {http://katmat.math.uni-bremen.de/acc/},
   langid = {english},
   keywords = {notion},
