--- a/notas/algebra1.tex
+++ b/notas/algebra1.tex
@@ -4,7 +4,7 @@
 
 \chapter{Category Theory}
 
-\textit{References \cite{adamekAbstractConcreteCategories,richterCategoriesHomotopyTheory2020}.} %ritcher
+\textit{References \cite{adamekAbstractConcreteCategories2004,richterCategoriesHomotopyTheory2020}.} %ritcher
 
 
 \section{Some facts}  
@@ -48,13 +48,13 @@ $ commutes.\\
 $$
 \delta: H_n(X, A) \rightarrow H_{n-1}(A) .
 $$
-
-$\delta$ is a natural transformation between the functors  $(X, A) \mapsto H_n(X, A)$ and $(X, A) \mapsto$ $H_{n-1}(A)$, from the category of pairs of topological spaces to the category of abelian groups. \\
+\noindent
+this set of morphism forms a natural transformation between the functors  $(X, A) \mapsto H_n(X, A)$ and $(X, A) \mapsto$ $H_{n-1}(A)$, from the category of pairs of topological spaces to the category of abelian groups. \\
 
 
 
 A natural transformation $F \xrightarrow{\tau} G$ whose components $\tau_A$ are isomorphisms is called a \textbf{natural isomorphism} from $F$ to $G$, and $F$ and $G$ are said to be \textbf{naturally isomorphic}, denoted by $F \cong G$.\\
-
+\end{example}
 
 
 \begin{example}
@@ -686,7 +686,7 @@ denoted $C / B$ and called the quotient complex. If $f: B \rightarrow C$ is a ch
 Suppose that $\mathcal{A}=\mathrm{Ch}$ and $f$ is a chain map. Show that the complex $\operatorname{ker}(f)$ is a kernel of $f$ and that $\operatorname{coker}(f)$ is a cokernel of $f$.
 
 \begin{theo}
-The category $\operatorname{Ch}=\boldsymbol{C h}(\mathcal{A})$ of chain complexes is an abelian category.   
+The category $\operatorname{Ch}=\mathbf{C h}(\mathcal{A})$ of chain complexes is an abelian category.   
 \end{theo}
 
 If $C$ is a chain complex and $n$ is an integer, we let $\tau_{\geq n} C$ denote the subcomplex of $C$ defined by
