--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -7,6 +7,7 @@
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage{textcomp}
 \usepackage{biblatex} 
 \usepackage{geometry}
 \geometry{margin=1.5in}
